# fallax

./: .coverage  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LESSONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SSOT.md  pyproject.toml  service-metadata.yaml  vercel.json
.claude/: AGENTS.md  CLAUDE.md  GUIDELINES.md  settings.json
.cursor/: rules.md
.github/workflows/: ci-smoke.yml  ci.yml  docs-doctrine.yml
benchmarks/v1/: baselines.json  metadata.json
dashboard/: __init__.py  __main__.py  api.py
dashboard/static/: index.html
docs/: INDEX.md  README.md  architecture.md  deployment.md  troubleshooting.md
reasonbench/: __init__.py  __main__.py  analyzer.py  benchmark.py  client.py  clusterer.py  evaluator.py  evolver.py  experiment.py  generator.py  models.py  pipeline.py  predictor.py  repair.py  report.py  root_cause.py  runner.py  scoring.py  storage.py  taxonomy.py  templates.py  validators.py
reasonbench/clients/: __init__.py  gemini.py  ollama.py  openai.py
reasonbench/data/: ambiguous_spec_trap.json  anchoring_trap.json  base_rate_neglect.json  composition_fallacy.json  conditional_probability_trap.json  conjunction_fallacy.json  contradictory_constraints.json  edge_case_inversion.json  (+17 more)
tests/: conftest.py  test_analyzer.py  test_baseline.py  test_benchmark.py  test_cli.py  test_client.py  test_clients.py  test_clusterer.py  test_dashboard.py  test_data.py  test_evaluator.py  test_evolver.py  test_experiment.py  test_generator.py  test_integration.py  test_models.py  test_pipeline.py  test_predictor.py  test_repair.py  test_report.py  test_root_cause.py  test_runner.py  test_scoring.py  test_storage.py  test_taxonomy.py  test_templates.py  test_validators.py
website/: index.html  robots.txt  site.webmanifest  sitemap.xml
(+8 files in other folders)
