[project]
name = "reasonbench"
version = "0.1.0"
description = "LLM Adversarial Reasoning Evaluation System"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reasonbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
