[project]
name = "reasonbench"
version = "0.1.0"
description = "LLM Adversarial Reasoning Evaluation System"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3",
    "anthropic>=0.40",
    "scikit-learn>=1.5",
    "requests>=2.33.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.8"]
all-providers = [
    "reasonbench[openai]",
    "reasonbench[gemini]",
]
dashboard = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-requests>=2.33.0.20260408",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reasonbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true
follow_untyped_imports = true
